Sort daily analysis by provider name
